--- a/style.css
+++ b/style.css
@@ -81,8 +81,12 @@ footer a {
   text-decoration: none;
 }
 
+footer a:link {
+  color:#FFFFFF;
+}
+
 footer a:visited {
-  color:#FFFFFF
+  color:#FFFFFF;
 }
 
  #padlock {
